--- a/sass/modulos/_footer.scss
+++ b/sass/modulos/_footer.scss
@@ -3,27 +3,35 @@
         margin-bottom: 1rem;
         display: flex;
         justify-content: space-between;
-        &--logo img{
-            display: block;
-            height: 6rem;
-        }
         &--copyright{
             font-size: 1.2rem;
             padding-top: 2rem;
         }
         &__redes{
-            display: flex;
-            justify-content: space-between;
-            width: 16rem;
-            &--facebook{
-                color: #3b5998;
+            text-align: center;
+            margin-top: 1rem;
+            a{
+                display: inline-block;
+                &:not(:last-child){
+                    margin-right: 2rem;
+                }
+
             }
-            &--telegram{
-                color: #00BBCC;
+            i{
+                // color: #3b5998;
+                // color: #00BBCC;
+                // color: #00acee;
+                font-size: 1.5rem;
+                width: 4rem;
+                height: 4rem;
+                background-color: black;
+                color: white;
+                border-radius: 50%;
+                align-items: center;
+                display: flex;
+                justify-content: center;
             }
-            &--twitter{
-                color: #00acee;
-            }
+
         }
     }
 }
