--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,18 +33,20 @@ header img {
   margin-bottom: 1.5rem;
 }
 
-.titulo {
-  color: #fec503;
-  font-size: 2.5rem;
+.titulo-n2 {
   font-family: "Montserrat", sans-serif;
+  font-size: 4rem;
   text-transform: uppercase;
-  text-decoration: underline;
-  padding: 1.5rem 3.5rem;
+  text-align: center;
 }
 
 .estilo {
   cursor: pointer;
   font-size: 4rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
 }
 
 .pl-1 {
@@ -55,6 +57,30 @@ header img {
   padding-bottom: 1.5rem;
 }
 
+.pb-5 {
+  padding-bottom: 5rem;
+}
+
+.pb-10 {
+  padding-bottom: 10rem;
+}
+
+.pt-1 {
+  padding-top: 1rem;
+}
+
+.pt-2 {
+  padding-top: 2rem;
+}
+
+.pt-5 {
+  padding-top: 5rem;
+}
+
+.pt-10 {
+  padding-top: 10rem;
+}
+
 .ff-1 {
   font-family: "Montserrat", sans-serif;
 }
@@ -63,15 +89,32 @@ header img {
   color: black;
 }
 
+.resumen-n3 {
+  font-family: "Roboto Slab", serif;
+  font-size: 1.6rem;
+  color: #6c757d;
+  line-height: 2.8rem;
+}
+
+.text-italic {
+  font-style: italic;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.logo {
+  color: #fec503;
+  font-family: "kaushan Script", cursive;
+  font-size: 2.8rem;
+  display: inline-block;
+}
+
 .header__nav__contenedor {
   display: flex;
   justify-content: space-between;
   font-size: 2.8rem;
-}
-.header__nav__contenedor--logo {
-  display: block;
-  width: 9.1;
-  padding: 1rem 1.5rem;
 }
 .header__nav__contenedor__menu {
   display: flex;
@@ -101,6 +144,9 @@ header img {
   background-position: center;
 }
 
+.perfil {
+  background-color: #eeeeee;
+}
 .perfil__contenedor__contenido__descripcion--texto {
   font-size: 1.2rem;
 }
@@ -112,24 +158,48 @@ header img {
   font-size: 1.2rem;
 }
 
+.portafolio {
+  background-color: #eeeeee;
+}
 .portafolio__contenedor__columna {
-  width: 80%;
   display: flex;
   justify-content: space-between;
-  margin: 3rem auto;
+  flex-wrap: wrap;
 }
-.portafolio__contenedor__columna--item {
-  width: 20rem;
-  height: auto;
+.portafolio__contenedor__columna__item {
+  width: calc(33.3333333333% - 2rem);
 }
-.portafolio__contenedor__columna--item img {
+.portafolio__contenedor__columna__item__imgBox {
+  position: relative;
+  cursor: pointer;
+}
+.portafolio__contenedor__columna__item__imgBox img {
   width: 100%;
   display: block;
 }
-.portafolio__contenedor__columna--item div {
-  font-size: 1.5rem;
-  text-align: center;
-  padding-top: 2rem;
+.portafolio__contenedor__columna__item__imgBox div {
+  position: absolute;
+  top: 0;
+  background-color: #fed136;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+.portafolio__contenedor__columna__item__imgBox:hover div {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s;
+}
+.portafolio__contenedor__columna__item__data {
+  background-color: white;
+  padding: 2rem 0;
 }
 
 .certificados__contenedor__caja {
@@ -140,15 +210,63 @@ header img {
 }
 .certificados__contenedor__caja--imagen {
   margin: 2.5rem 3.5rem;
-  border: 0.1rem solid black;
+}
+.certificados__contenedor__caja--imagen ul, .certificados__contenedor__caja--imagen li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.certificados__contenedor__caja--imagen ul.slider {
+  position: relative;
+  width: 800px;
+  height: 300px;
+}
+.certificados__contenedor__caja--imagen ul.slider li {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  transition: opacity 0.5s;
+  background: #fff;
+}
+.certificados__contenedor__caja--imagen ul.slider li img {
+  object-fit: cover;
+}
+.certificados__contenedor__caja--imagen ul.slider li:first-child {
+  opacity: 1;
+  /*Mostramos el primer <li>*/
+}
+.certificados__contenedor__caja--imagen ul.slider li:target {
+  opacity: 1;
+  /*Mostramos el <li> del enlace que pulsemos*/
+}
+.certificados__contenedor__caja--imagen .menu {
+  text-align: center;
+  margin: 20px;
+}
+.certificados__contenedor__caja--imagen .menu li {
+  display: inline-block;
+  text-align: center;
+}
+.certificados__contenedor__caja--imagen .menu li a {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  background-color: grey;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  border-radius: 100%;
 }
 .certificados__contenedor__caja--imagen img {
   width: 30.8rem;
-  height: 30rem;
+  height: auto;
 }
 .certificados__contenedor__caja--nombre {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .footer__contenido {
@@ -156,27 +274,30 @@ header img {
   display: flex;
   justify-content: space-between;
 }
-.footer__contenido--logo img {
-  display: block;
-  height: 6rem;
-}
 .footer__contenido--copyright {
   font-size: 1.2rem;
   padding-top: 2rem;
 }
 .footer__contenido__redes {
+  text-align: center;
+  margin-top: 1rem;
+}
+.footer__contenido__redes a {
+  display: inline-block;
+}
+.footer__contenido__redes a:not(:last-child) {
+  margin-right: 2rem;
+}
+.footer__contenido__redes i {
+  font-size: 1.5rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  align-items: center;
   display: flex;
-  justify-content: space-between;
-  width: 16rem;
-}
-.footer__contenido__redes--facebook {
-  color: #3b5998;
-}
-.footer__contenido__redes--telegram {
-  color: #00BBCC;
-}
-.footer__contenido__redes--twitter {
-  color: #00acee;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=estilos.css.map */
