--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -17,18 +17,19 @@ $font-roboto: 'Roboto Slab', serif;
     margin-bottom: 1.5rem;
 }
 
-.titulo{
-    color: #fec503;
-    font-size: 2.5rem;
+.titulo-n2{
     font-family: $font-mont;
+    font-size: 4rem;
     text-transform: uppercase;
-    text-decoration: underline;
-    padding: 1.5rem 3.5rem;
+    text-align: center;
 }
 
 .estilo{
     cursor: pointer;
     font-size: 4rem;
+}
+.mb-2{
+    margin-bottom: 2rem;
 }
 .pl-1{
     padding-left: 3.5rem;
@@ -36,9 +37,46 @@ $font-roboto: 'Roboto Slab', serif;
 .pb-1{
     padding-bottom: 1.5rem;
 }
+.pb-5{
+    padding-bottom: 5rem;
+}
+.pb-10{
+    padding-bottom: 10rem;
+}
+.pt-1{
+    padding-top: 1rem;
+}
+.pt-2{
+    padding-top: 2rem;
+}
+.pt-5{
+    padding-top: 5rem;
+}
+.pt-10{
+    padding-top: 10rem;
+}
 .ff-1{
     font-family: $font-mont;
 }
 .color-black{
     color: black;
+}
+.resumen-n3{
+    font-family: $font-roboto;
+    font-size: 1.6rem;
+    color: #6c757d;
+    // text-align: center;
+    line-height: 2.8rem;
+}
+.text-italic{
+    font-style: italic;
+}
+.text-center{
+    text-align: center;
+}
+.logo{
+    color: #fec503;
+    font-family: $font-kaushan;
+    font-size: 2.8rem;
+    display: inline-block;
 }
