--- a/sass/modulos/_portafolio.scss
+++ b/sass/modulos/_portafolio.scss
@@ -1,23 +1,46 @@
 .portafolio{
+    background-color: #eeeeee;
     &__contenedor{
         &__columna{
-            width: 80%;
             display: flex;
             justify-content: space-between;
-            margin: 3rem auto;
-            // border: 0.5rem solid black;
-            &--item{
-                width: 20rem;
-                height: auto;
-            }
-            &--item img{
-                width: 100%;
-                display: block;
-            }
-            &--item div{
-                font-size: 1.5rem;
-                text-align: center;
-                padding-top: 2rem;
+            flex-wrap: wrap;
+            &__item{
+                width: calc(100% / 3 - 2rem);
+                &__imgBox{
+                    position: relative;
+                    cursor: pointer;
+                    img{
+                        width: 100%;
+                        display: block;
+                    }
+                    div{
+                        position: absolute;
+                        top: 0;
+                        background-color: rgba(#fed136, 9);
+                        width: 100%;
+                        height: 100%;
+                        color: white;
+                        font-size: 6rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: all .3s;
+                    }
+                }
+                &__imgBox:hover{
+                    div{
+                        opacity: 1;
+                        visibility: visible;
+                        transition: all .3s;
+                    }
+                }
+                &__data{
+                    background-color: white;
+                    padding: 2rem 0;
+                }
             }
         }
     }
