--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -9,6 +9,12 @@ $font-roboto: 'Roboto Slab', serif;
     max-width: 120rem;
     margin-left: auto;
     margin-right: auto;
+    @media only screen and (max-width:$bp-large){
+        max-width: 72rem;
+    }
+    @media only screen and (max-width:$bp-medium){
+        max-width: 54rem;
+    }
 }
 
 .block{
@@ -22,6 +28,9 @@ $font-roboto: 'Roboto Slab', serif;
     font-size: 4rem;
     text-transform: uppercase;
     text-align: center;
+    @media only screen and (max-width:$bp-small){
+        font-size: 2rem;
+    }
 }
 
 .estilo{
@@ -78,5 +87,9 @@ $font-roboto: 'Roboto Slab', serif;
     color: #fec503;
     font-family: $font-kaushan;
     font-size: 2.8rem;
+    padding-left: 1rem;
     display: inline-block;
+    @media only screen and (max-width:$bp-large) {
+        font-size: 2rem;
+    }
 }
