--- a/sass/modulos/_certificados.scss
+++ b/sass/modulos/_certificados.scss
@@ -5,8 +5,11 @@
             height: 40rem;
             border: 1px solid #fec503;
             margin: 1rem auto;
+            @media only screen and (max-width:$bp-large) {
+                width: 80%;
+            }
             &--imagen {
-                margin: 02.5rem 3.5rem;
+                margin: 2.5rem 3rem;
                 //border: 0.1rem solid black;
                 ul, li {
                     padding: 0;
@@ -16,8 +19,12 @@
                 
                 ul.slider{
                   position: relative;
-                  width: 800px;
-                  height: 300px;
+                  width: 19.3rem;
+                  height: 18.7rem;
+                  @media only screen and (max-width:$bp-large){
+                      width: 103%;
+                      height: 46rem;
+                  }
                 }
                 
                 ul.slider li {
@@ -42,7 +49,11 @@
                 }
                 .menu{
                     text-align: center;
-                    margin: 20px;
+                    margin-top: 12rem;
+                    //margin: 20px;
+                    @media only screen and (max-width:$bp-large) {
+                        margin-top: -14rem;
+                    }
                   }
                   
                   .menu li{
@@ -63,8 +74,20 @@
                   }
             }
             &--imagen img{
-                width: 30.8rem;
+                width: 23.2vw;
                 height: auto;
+                @media only screen and (max-width:$bp-large) {
+                    width: 40vw;
+                    margin: 1rem 10rem;
+                }
+                @media only screen and (max-width:$bp-medium) {
+                    width: 50vw;
+                    margin: 0 4rem;
+                }
+                @media only screen and (max-width:$bp-small) {
+                    width: 50vw;
+                    margin: 0 2.5rem;
+                }
             }
             &--nombre {
                 font-size: 1.5rem;
