--- a/sass/modulos/_footer.scss
+++ b/sass/modulos/_footer.scss
@@ -4,12 +4,18 @@
         display: flex;
         justify-content: space-between;
         &--copyright{
-            font-size: 1.2rem;
-            padding-top: 2rem;
+            font-size: 2rem;
+            padding: 2rem;
+            text-align: justify;
         }
         &__redes{
             text-align: center;
             margin-top: 1rem;
+            padding-right: 2rem;
+            @media only screen and (max-width:$bp-large) {
+                display: flex;
+                padding: 2rem;
+            }
             a{
                 display: inline-block;
                 &:not(:last-child){
@@ -30,6 +36,11 @@
                 align-items: center;
                 display: flex;
                 justify-content: center;
+                @media only screen and (max-width:$bp-large) {
+                    font-size: 1rem;
+                    width: 2rem;
+                    height: 2rem;
+                }
             }
 
         }
