commit actualizacion index.html codigo.js y constantes.scss

--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -67,6 +67,9 @@ $font-roboto: 'Roboto Slab', serif;
 .ff-1{
     font-family: $font-mont;
 }
+.fw{
+    font-weight: bold;
+}
 .color-black{
     color: black;
 }
