--- a/sass/modulos/_portafolio.scss
+++ b/sass/modulos/_portafolio.scss
@@ -5,6 +5,7 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
+            padding: 15px;
             &__item{
                 width: calc(100% / 3 - 2rem);
                 &__imgBox{
