Modificacion del estilos.css.map

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,6 +103,10 @@ header img {
   font-family: "Montserrat", sans-serif;
 }
 
+.fw {
+  font-weight: bold;
+}
+
 .color-black {
   color: black;
 }
@@ -193,6 +197,7 @@ header img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 15px;
 }
 .portafolio__contenedor__columna__item {
   width: calc(33.3333333333% - 2rem);
@@ -272,12 +277,10 @@ header img {
   object-fit: cover;
 }
 .certificados__contenedor__caja--imagen ul.slider li:first-child {
-  opacity: 1;
-  /*Mostramos el primer <li>*/
+  opacity: 1; /*Mostramos el primer <li>*/
 }
 .certificados__contenedor__caja--imagen ul.slider li:target {
-  opacity: 1;
-  /*Mostramos el <li> del enlace que pulsemos*/
+  opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
 }
 .certificados__contenedor__caja--imagen .menu {
   text-align: center;
