--- a/sass/modulos/_portafolio.scss
+++ b/sass/modulos/_portafolio.scss
@@ -10,15 +10,16 @@
                 width: calc(100% / 3 - 2rem);
                 &__imgBox{
                     position: relative;
-                    cursor: pointer;
+                    //cursor: pointer;
                     img{
                         width: 100%;
+                        height: 227.76px;
                         display: block;
                     }
                     div{
                         position: absolute;
                         top: 0;
-                        background-color: rgba(#fed136, 9);
+                        //background-color: rgba(#fed136, 9);
                         width: 100%;
                         height: 100%;
                         color: white;
