--- a/css/estilos.css
+++ b/css/estilos.css
@@ -204,16 +204,15 @@ header img {
 }
 .portafolio__contenedor__columna__item__imgBox {
   position: relative;
-  cursor: pointer;
 }
 .portafolio__contenedor__columna__item__imgBox img {
   width: 100%;
+  height: 227.76px;
   display: block;
 }
 .portafolio__contenedor__columna__item__imgBox div {
   position: absolute;
   top: 0;
-  background-color: #fed136;
   width: 100%;
   height: 100%;
   color: white;
