--- a/css/estilos.css
+++ b/css/estilos.css
@@ -135,7 +135,7 @@ header img {
 }
 @media only screen and (max-width: 62em) {
   .logo {
-    font-size: 2rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -147,6 +147,10 @@ header img {
 .header__nav__contenedor__menu {
   display: flex;
   margin-top: auto;
+  width: 430px;
+  height: auto;
+  flex-direction: row;
+  justify-content: center;
 }
 .header__nav__contenedor__menu__item--link {
   font-size: 1.4rem;
@@ -157,7 +161,12 @@ header img {
 }
 @media only screen and (max-width: 62em) {
   .header__nav__contenedor__menu__item--link {
-    font-size: 1rem;
+    font-size: 2rem;
+  }
+}
+@media only screen and (max-width: 48em) {
+  .header__nav__contenedor__menu__item--link {
+    font-size: 1.1rem;
   }
 }
 .header__nav__contenedor__menu__item--link:hover {
@@ -180,14 +189,53 @@ header img {
   background-color: #eeeeee;
 }
 .perfil__contenedor__contenido__descripcion--texto {
-  font-size: 1.2rem;
+  font-size: 2.2rem;
+}
+@media only screen and (max-width: 62em) {
+  .perfil__contenedor__contenido__descripcion--texto {
+    font-size: 3.2rem;
+  }
+}
+@media only screen and (max-width: 48em) {
+  .perfil__contenedor__contenido__descripcion--texto {
+    font-size: 2rem;
+  }
 }
 .perfil__contenedor__contenido__contacto--subtitulo {
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-decoration: underline;
 }
+@media only screen and (max-width: 62em) {
+  .perfil__contenedor__contenido__contacto--subtitulo {
+    font-size: 3.2rem;
+  }
+}
+@media only screen and (max-width: 48em) {
+  .perfil__contenedor__contenido__contacto--subtitulo {
+    font-size: 2rem;
+  }
+}
+.perfil__contenedor__contenido__contacto--icono {
+  background-image: url("/img/iconos/file-pdf-regular.svg");
+  cursor: pointer;
+}
 .perfil__contenedor__contenido__contacto--datos {
-  font-size: 1.2rem;
+  font-size: 2.2rem;
+}
+@media only screen and (max-width: 62em) {
+  .perfil__contenedor__contenido__contacto--datos {
+    font-size: 3.2rem;
+  }
+}
+@media only screen and (max-width: 48em) {
+  .perfil__contenedor__contenido__contacto--datos {
+    font-size: 2rem;
+  }
+}
+.perfil__contenedor__contenido__contacto--svg {
+  width: 150px;
+  height: 150px;
+  margin: 14px 35px;
 }
 
 .portafolio {
@@ -236,21 +284,21 @@ header img {
 
 .certificados__contenedor__caja {
   width: 38rem;
-  height: 40rem;
+  height: 32rem;
   border: 1px solid #fec503;
-  margin: 1rem auto;
+  margin: 0 auto;
 }
 @media only screen and (max-width: 62em) {
   .certificados__contenedor__caja {
     width: 80%;
+    height: 23rem;
   }
 }
 .certificados__contenedor__caja--imagen {
-  margin: 5.5rem 0.5rem;
+  margin: 1.5rem 0.5rem;
 }
 .certificados__contenedor__caja--imagen ul, .certificados__contenedor__caja--imagen li {
-  padding: 0;
-  margin: 0;
+  margin: auto;
   list-style: none;
 }
 .certificados__contenedor__caja--imagen ul.slider {
@@ -258,8 +306,8 @@ header img {
 }
 @media only screen and (max-width: 62em) {
   .certificados__contenedor__caja--imagen ul.slider {
-    width: 103%;
-    height: 46rem;
+    width: 91%;
+    height: 21rem;
   }
 }
 .certificados__contenedor__caja--imagen ul.slider li {
@@ -321,8 +369,8 @@ header img {
 }
 @media only screen and (max-width: 36em) {
   .certificados__contenedor__caja--imagen img {
-    width: 50vw;
-    margin: 0 2.5rem;
+    width: 67vw;
+    margin: 0 1.5rem;
   }
 }
 .certificados__contenedor__caja--nombre {
