--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -7,6 +7,10 @@
             &__menu{
                 display: flex;
                 margin-top: auto;
+                width: 430px;
+                height: auto;
+                flex-direction: row;
+                justify-content: center;
                 &__item{
                     &--link{
                         font-size: 1.4rem;
@@ -15,7 +19,10 @@
                         padding: 1rem 1.5rem;
                         transition: all .3s;
                         @media only screen and (max-width:$bp-large) {
-                            font-size: 1rem;
+                            font-size: 2rem;
+                        }
+                        @media only screen and (max-width:$bp-medium) {
+                            font-size: 1.1rem;
                         }
                     }
                     &--link:hover{
