--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,6 +144,22 @@ header img {
   justify-content: space-between;
   font-size: 2.8rem;
 }
+.header__nav__contenedor--btnMenu {
+  border: 1px solid #000;
+  color: #000;
+  padding: 5px 10px;
+  margin-top: 15px;
+  margin-right: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: none;
+}
+@media only screen and (max-width: 62em) {
+  .header__nav__contenedor--btnMenu {
+    display: block;
+    z-index: 1;
+  }
+}
 .header__nav__contenedor__menu {
   display: flex;
   margin-top: auto;
@@ -151,6 +167,24 @@ header img {
   height: auto;
   flex-direction: row;
   justify-content: center;
+}
+@media only screen and (max-width: 62em) {
+  .header__nav__contenedor__menu {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.88);
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 86vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+  }
+  .header__nav__contenedor__menu.mostrarMenu {
+    left: 0;
+    transition: all 0.5s;
+  }
 }
 .header__nav__contenedor__menu__item--link {
   font-size: 1.4rem;
@@ -161,12 +195,7 @@ header img {
 }
 @media only screen and (max-width: 62em) {
   .header__nav__contenedor__menu__item--link {
-    font-size: 2rem;
-  }
-}
-@media only screen and (max-width: 48em) {
-  .header__nav__contenedor__menu__item--link {
-    font-size: 1.1rem;
+    font-size: 2.8rem;
   }
 }
 .header__nav__contenedor__menu__item--link:hover {
