--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -4,6 +4,20 @@
             display: flex;
             justify-content: space-between;
             font-size: 2.8rem;
+            &--btnMenu{ 
+                border: 1px solid #000;
+                color: #000;
+                padding: 5px 10px;
+                margin-top: 15px;
+                margin-right: 10px;
+                border-radius: 10px;
+                cursor: pointer;
+                display: none; 
+                @media only screen and (max-width:$bp-large) {
+                    display: block;
+                    z-index: 1;
+                }
+            }
             &__menu{
                 display: flex;
                 margin-top: auto;
@@ -11,6 +25,23 @@
                 height: auto;
                 flex-direction: row;
                 justify-content: center;
+                @media only screen and (max-width:$bp-large){
+                    //display: none;
+                    position: absolute;
+                    background-color: rgba(#000, .88);
+                    top: 0;
+                    left: -100%;
+                    width: 100%;
+                    height: 86vh;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    transition: all .5s;
+                    &.mostrarMenu{
+                        left: 0;
+                        transition: all .5s;
+                    }
+                }
                 &__item{
                     &--link{
                         font-size: 1.4rem;
@@ -19,10 +50,10 @@
                         padding: 1rem 1.5rem;
                         transition: all .3s;
                         @media only screen and (max-width:$bp-large) {
-                            font-size: 2rem;
+                            font-size: 2.8rem;
                         }
                         @media only screen and (max-width:$bp-medium) {
-                            font-size: 1.1rem;
+                            //font-size: 1.1rem;
                         }
                     }
                     &--link:hover{
