Creando el modulo contactos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,6 +67,10 @@ header img {
   margin-bottom: 2rem;
 }
 
+.mb-7 {
+  margin-bottom: 7rem;
+}
+
 .pl-1 {
   padding-left: 3.5rem;
 }
@@ -99,6 +103,10 @@ header img {
   padding-top: 10rem;
 }
 
+.mt-5 {
+  margin-top: 5rem;
+}
+
 .ff-1 {
   font-family: "Montserrat", sans-serif;
 }
@@ -109,6 +117,14 @@ header img {
 
 .color-black {
   color: black;
+}
+
+.resumen-n2 {
+  font-family: "Merriweather", serif;
+  font-size: 1.6rem;
+  color: #6c757d;
+  text-align: center;
+  font-style: italic;
 }
 
 .resumen-n3 {
@@ -124,6 +140,28 @@ header img {
 
 .text-center {
   text-align: center;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+.btn-amarillo {
+  color: white;
+  background-color: #fed136;
+  transition: all 0.3s;
+}
+
+.btn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding: 2rem 4rem;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+  display: inline-block;
+  border: none;
+  cursor: pointer;
 }
 
 .logo {
@@ -514,6 +552,36 @@ header img {
     width: 6.6rem;
     height: 6.6rem;
   }
+}
+.contacto {
+  background-color: #212529;
+  background-image: url(../img/map-image.png);
+  background-size: cover;
+  background-position: center;
+}
+.contacto__contenedor__form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contacto__contenedor__form__col {
+  width: calc(50% - 1.5rem);
+}
+.contacto__contenedor__form__col--formGroup:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.contacto__contenedor__form__col--formGroup input, .contacto__contenedor__form__col--formGroup textarea {
+  width: 100%;
+  font-size: 1.6rem;
+  padding: 2rem;
+  box-sizing: border-box;
+  font-family: "Roboto Slab", serif;
+  border-radius: 0.5rem;
+  border: none;
+  outline: 0;
+}
+.contacto__contenedor__form--btnBox {
+  width: 100%;
 }
 
 /*# sourceMappingURL=estilos.css.map */
