--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -79,6 +79,9 @@ $font-roboto: 'Roboto Slab', serif;
 .color-black{
     color: black;
 }
+.color-white{
+    color: white;
+}
 .resumen-n2{
     font-family: $font-merri;
     font-size: 1.6rem;
@@ -118,7 +121,7 @@ $font-roboto: 'Roboto Slab', serif;
     border: none;
     cursor: pointer;
 }
-.logo{
+ .logo{
     color: #fec503;
     font-family: $font-kaushan;
     font-size: 2.8rem;
@@ -127,4 +130,4 @@ $font-roboto: 'Roboto Slab', serif;
     @media only screen and (max-width:$bp-large) {
         font-size: 3.5rem;
     }
-}
+} 
