--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -1,9 +1,42 @@
 .header{
+    background-image: url(../img/Banner.png);
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
     &__nav{
+        padding: 2.5rem 0;
+        width: 100%;
+        transition: all .3s;
+        position: fixed;
+        z-index: 1;
+        @media only screen and (max-width:$bp-large){
+            background-color: #212529;
+            padding: 1rem 0;
+            width: 88%;
+        }
+        &.active{
+            background-color: #212529;
+            padding: 1rem 0;
+            transition: all .3s;
+            & .header__nav__contenedor--logo{
+                font-size: 2rem;
+                transition: all .3s;
+            }
+        }
         &__contenedor{
             display: flex;
             justify-content: space-between;
             font-size: 2.8rem;
+            &--logo{
+                color: #fec503;
+                font-family: $font-kaushan;
+                font-size: 2.8rem;
+                padding-left: 1rem;
+                display: inline-block;
+                @media only screen and (max-width:$bp-large) {
+                    font-size: 3.5rem;
+                }
+            }
             &--btnMenu{ 
                 border: 1px solid #000;
                 color: #000;
@@ -47,7 +80,7 @@
                         font-size: 1.4rem;
                         text-transform: uppercase;
                         display: inline-block;
-                        padding: 1rem 1.5rem;
+                        padding: 1rem 0.6rem;
                         transition: all .3s;
                         @media only screen and (max-width:$bp-large) {
                             font-size: 2.8rem;
