--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -3,6 +3,10 @@
     height: 100vh;
     background-position: center;
     background-size: cover;
+    @media only screen and (max-width:$bp-large) {
+        max-width: 50%;
+        max-height: 50%;
+    }
     &__nav{
         padding: 2.5rem 0;
         width: 100%;
@@ -12,7 +16,7 @@
         @media only screen and (max-width:$bp-large){
             background-color: #212529;
             padding: 1rem 0;
-            width: 88%;
+            
         }
         &.active{
             background-color: #212529;
