--- a/css/estilos.css
+++ b/css/estilos.css
@@ -187,6 +187,12 @@ header img {
   background-position: center;
   background-size: cover;
 }
+@media only screen and (max-width: 62em) {
+  .header {
+    max-width: 50%;
+    max-height: 50%;
+  }
+}
 .header__nav {
   padding: 2.5rem 0;
   width: 100%;
@@ -198,7 +204,6 @@ header img {
   .header__nav {
     background-color: #212529;
     padding: 1rem 0;
-    width: 88%;
   }
 }
 .header__nav.active {
@@ -509,7 +514,8 @@ header img {
 @media only screen and (max-width: 62em) {
   .footer__contenido__redes {
     display: flex;
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-right: 0;
   }
 }
 .footer__contenido__redes a {
