Cambiando el color go-top-button

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -555,7 +555,7 @@ header img {
 .go-top-button {
   width: 0rem;
   height: 0rem;
-  background: #2071b2;
+  background: #fec503;
   border-radius: 50%;
   cursor: pointer;
   transition: 0.2s;
