--- a/css/estilos.css
+++ b/css/estilos.css
@@ -400,8 +400,8 @@ header img {
 }
 
 .certificados__contenedor__caja {
-  width: 38rem;
-  height: 32rem;
+  width: 32rem;
+  height: 25rem;
   border: 1px solid #fec503;
   margin: 0 auto;
 }
@@ -412,7 +412,7 @@ header img {
   }
 }
 .certificados__contenedor__caja--imagen {
-  margin: 1.5rem 0.5rem;
+  margin: auto;
 }
 .certificados__contenedor__caja--imagen ul, .certificados__contenedor__caja--imagen li {
   margin: auto;
