Actualizar color #fec503 al _go-top.scss

--- a/sass/modulos/_go-top.scss
+++ b/sass/modulos/_go-top.scss
@@ -10,7 +10,7 @@
 .go-top-button{
     width: 0rem;
     height: 0rem;
-    background: #2071b2;
+    background: #fec503;
     border-radius: 50%;
     cursor: pointer;
     transition: .2s;
