Actualizando el banner

--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -102,6 +102,9 @@ $font-roboto: 'Roboto Slab', serif;
 .text-center{
     text-align: center;
 }
+.text-justify{
+    text-align: justify;
+}
 .height-100 {
     height: 100%;
 }
