--- a/css/estilos.css
+++ b/css/estilos.css
@@ -146,6 +146,10 @@ header img {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .height-100 {
   height: 100%;
 }
@@ -186,12 +190,6 @@ header img {
   height: 100vh;
   background-position: center;
   background-size: cover;
-}
-@media only screen and (max-width: 62em) {
-  .header {
-    max-width: 50%;
-    max-height: 50%;
-  }
 }
 .header__nav {
   padding: 2.5rem 0;
