--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -4,8 +4,8 @@
     background-position: center;
     background-size: cover;
     @media only screen and (max-width:$bp-large) {
-        max-width: 50%;
-        max-height: 50%;
+        //max-width: 50%;
+        //max-height: 50%;
     }
     &__nav{
         padding: 2.5rem 0;
