--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -113,6 +113,11 @@ $font-roboto: 'Roboto Slab', serif;
     background-color: #fed136;
     transition: all 0.3s;
 }
+.btn-amarillo:hover{
+    color: black;
+    background-color: #fec503;
+    transition: all 0.3s;
+}
 .btn {
     font-family: "Montserrat", sans-serif;
     font-size: 1.8rem;
