--- a/sass/modulos/_header.scss
+++ b/sass/modulos/_header.scss
@@ -1,5 +1,5 @@
 .header{
-    background-image: url(../img/Banner.png);
+    background-image: url(../img/Banner-2.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
@@ -99,6 +99,17 @@
                     }
                 }
             }
+            
+        }
+        
+    }
+    &__LlamadaAccion{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 170px 50px 0px 90px;
+        &--btnaccion{
+            margin-top: 15px;
         }
     }
     &__banner{
