--- a/sass/base/_constantes.scss
+++ b/sass/base/_constantes.scss
@@ -33,6 +33,10 @@ $font-roboto: 'Roboto Slab', serif;
     }
 }
 
+.uppercase{
+    text-transform: uppercase;
+}
+
 .estilo{
     cursor: pointer;
     font-size: 4rem;
@@ -75,6 +79,18 @@ $font-roboto: 'Roboto Slab', serif;
 }
 .fw{
     font-weight: bold;
+}
+.size-18{
+    font-size: 1.8rem;
+}
+.size-2{
+    font-size: 2rem;
+}
+.size-25{
+    font-size: 2.5rem;
+}
+.size-1{
+    font-size: 1rem;
 }
 .color-black{
     color: black;
