--- a/sass/modulos/_contacto.scss
+++ b/sass/modulos/_contacto.scss
@@ -24,6 +24,13 @@
                         border: none;
                         outline: 0;
                     }
+                    .caja_texto:focus{
+                        border: 2px solid #1277dd;
+                    }
+                    &:focus:required {
+                        border-color: red;
+                        outline: 0 none;
+                      }
                 }
             }
             &--btnBox{
